Making final corrections for legibility

--- a/final_project/static/main.css
+++ b/final_project/static/main.css
@@ -17,6 +17,14 @@ body {
     right: 10px;
 }
 
+.home {
+    font-size: 14px;
+    text-decoration: none;
+    color: black;
+    top: 10px;
+    right: 10px;
+}
+
 .login-link {
     color: gray;
     text-decoration: none;
